added stocks/symbols, stocks/{symbol} routes
