# docs/swaggerpet.json
@@ -1,51 +1,92 @@
 { "openapi":"3.0.0",
     "info":{
-    "title":"World City API",
-    "description":"This is a simple Express API based on the World Cities Database. It supports basic city and province listings, along with filtering based on Country Code",
-    "version":"1.0.0",
-    "termsOfService":"http://swagger.io/terms/",
-    "contact":{"email":"j.hogan@qut.edu.au"},
-    "license":{
-    "name":"Apache 2.0",
-    "url":"http://www.apache.org/licenses/LICENSE-2.0.html"
-    }
+    "title":"Stocks API",
+    "description":"This is a simple Express API that displays data and stuff from the server",
+    "version":"1.0.0"
     },
     "servers":[ 
         {
-            "url": "https://localhost"
+            "url": "http://localhost:3001"
         }
     ],
     "basePath":"/api",
         "tags":[
         {
-            "name":"information",
+            "name":"Queries",
             "description":"General API description"
         },
         {
-            "name":"query",
+            "name":"Users",
             "description":"API queries based on city and optional country code."
         }
  ],
     "paths":{ 
-        "/":{
+        "/stocks/symbols":{
                 "get":{
-                "tags":["information"],
-                "summary":"Simple information page",
-                "description":"Very basic API home page promising moreinformation",
-                "operationId":"apiHome",
-                "produces":["text/html"],
-                "responses":
-                {
-                    "200":
+                    "tags":["Queries"],
+                    "summary":"Simple information page",
+                    "description":"Returns all available stocks, optionally filtered by industry section",
+                    "parameters": [
                         {
-                            "description":"successful operation"
+                            "in": "query",
+                            "name": "industry",
+                            "description": "Industry sector (may use prefix e.g. Information Technology)",
+                            "required": false,
+                            "schema": {
+                              "type": "string",
+                                "industry": {
+                                  "type": "string"
+                                }
+                              }
+                          }
+                      ],
+                    "responses":
+                    {
+                        "200":
+                            {
+                                "description": "A JSON array of stock listing objects comprising name, symbol and industry sector",
+                                "content": 
+                                {
+                                    "application/json": {
+                                        "schema": {
+                                            "type": "array",
+                                            "items":{
+                                                "type": "object",
+                                                "properties":{
+                                                    "name":{
+                                                        "type": "string",
+                                                        "example": "Agilent Technologies Inc"
+                                                    },
+                                                    "symbol":{
+                                                        "type": "string", 
+                                                        "example": "A"
+                                                    },
+                                                    "industry":{
+                                                        "type": "string", 
+                                                        "example": "Health Care"
+                                                    }
+                                                }
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        ,
+                    "400":
+                        {
+                            "description": "Invalid query parameter"
+                        }
+                        ,
+                    "404":
+                        {
+                            "description": "Industry sector not found"
                         }
                 }
             }},
 
         "/api/city":{ 
             "get":{
-                "tags":["query"],
+                "tags":["Queries"],
                 "summary":"List of cities and provinces",
                 "description":"A full listing of cities and their provinces for the database",
                 "operationId":"listCitiesAndDistricts",
@@ -85,27 +126,40 @@
                         }
                 }
             }},
-            "/api/city/{:CountryCode}": { 
+            "/api/city/{CountryCode}": { 
                 "get":{
-                    "tags":["query"],
+                    "tags":["Queries"],
                     "summary":"List of cities and provinces based on country code",
                     "description":"A full listing of cities and their provinces for the database",
-                    "operationId":"listCitiesAndDistricts",
+                    "operationId":"listCitiestoCountryCode",
                     "produces":["application/json"],
                     "parameters": [
                         {
                           "in": "path",
-                          "name": ":CountryCode",
+                          "name": "CountryCode",
                           "description": "Pass Country Code Here",
                           "required": true,
                           "schema": {
                             "type": "string",
-                              "email": {
+                              "Country": {
                                 "type": "string"
                               }
                             }
-                        }
+                        },
+                        {
+                            "in": "query",
+                            "name": "District",
+                            "description": "Pass District Here",
+                            "required": false,
+                            "schema": {
+                              "type": "string",
+                                "Dis": {
+                                  "type": "string"
+                                }
+                              }
+                          }
                       ],
+                      
                     "responses":
                     {
                         "200":
@@ -140,7 +194,94 @@
                                 }
                             }
                     }
-                }}
+                }},
+                "/user/register": { 
+                "post":{
+                    "tags":["Users"],
+                    "summary":"List of cities and provinces",
+                    "description":"A full listing of cities and their provinces for the database",
+                    "operationId":"listCitiesAndDistricts",
+                    "produces":["application/json"],
+                    "responses":
+                    {
+                        "200":
+                            {
+                                "description":"successful operation",
+                                "schema":{
+                                    "type": "object",
+                                    "properties":{
+                                        "Error":{
+                                            "type": "string",
+                                            "enum": ["true","false"]
+                                        },
+                                        "Message":{
+                                          "type":"string",
+                                          "enum":["Success","Failure"]  
+                                        },
+                                        "City":{
+                                            "tpye":"array",
+                                            "items":{
+                                                "type":"object",
+                                                "properties":{
+                                                    "name":{
+                                                        "type":"string"
+                                                    },
+                                                    "district":{
+                                                        "type":"string"
+                                                    }
+                                                }
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                    }
+                }
+            },
+            "/user/login": { 
+                "post":{
+                    "tags":["Users"],
+                    "summary":"List of cities and provinces",
+                    "description":"A full listing of cities and their provinces for the database",
+                    "operationId":"listCitiesAndDistricts",
+                    "produces":["application/json"],
+                    "responses":
+                    {
+                        "200":
+                            {
+                                "description":"successful operation",
+                                "schema":{
+                                    "type": "object",
+                                    "properties":{
+                                        "Error":{
+                                            "type": "string",
+                                            "enum": ["true","false"]
+                                        },
+                                        "Message":{
+                                          "type":"string",
+                                          "enum":["Success","Failure"]  
+                                        },
+                                        "City":{
+                                            "tpye":"array",
+                                            "items":{
+                                                "type":"object",
+                                                "properties":{
+                                                    "name":{
+                                                        "type":"string"
+                                                    },
+                                                    "district":{
+                                                        "type":"string"
+                                                    }
+                                                }
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                    }
+                }
+            }
+
         }
     
 }
